# gibi

./: .gitignore  .gitmodules  Cargo.toml  README.md  generate_opcode_format.py  index.html  install-deps.sh  opcodes.json
assets/: sw.js
src/: apu.rs  cartridge.rs  cpu.rs  debug.rs  gameboy.rs  gui.rs  interrupts.rs  joypad.rs  lib.rs  main.rs  memory.rs  mmu.rs  opcodes.rs  options.rs  palettes.rs  ppu.rs  serial.rs  textures.rs  timer.rs  ui.rs  utils.rs
src/framebuffer/: access.rs  mod.rs
