[package]
name = "gibi"
version = "0.1.0"
edition = "2021"
authors = ["Rudolph Almeida <rudolf1.almeida@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
paste = "1.0.7"
eframe = "0.22.0"
rfd = "0.11.4"

[profile.release]
#codegen-units = 1
#lto = true
panic = "abort"
