[package]
name = "gibi"
version = "0.1.0"
edition = "2021"
authors = ["Rudolph Almeida <rudolf1.almeida@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
paste = "1.0.7"
eframe = { version = "0.24.0", features = ["persistence"] }
rfd = "0.12.1"
cpal = "0.15.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
num-traits = { version = "0.2.17", features = [] }

[profile.release]
#codegen-units = 1
#lto = true
panic = "abort"
