[package]
name = "gibi"
version = "0.1.0"
edition = "2021"
authors = ["Rudolph Almeida <rudolf1.almeida@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
paste = "1.0.15"
eframe = { version = "0.28.1", features = ["persistence"] }
rfd = "0.14.1"
cpal = "0.15.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
num-traits = { version = "0.2.19", features = [] }
circular-buffer = "0.1.7"
thiserror = "1.0.63"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
